[project]
name = "FoxConnect"
version = "0.0.1"
description = "Web based tool to automatically generate logic flow diagrams for Foxboro I/A series DCS based on configuration files dumped from the ICC."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "app",
    "pyfastmurmur3",
    "quart_d3graphviz",
    "quart_foxdata",
    "quart_htmx",
    "Quart == 0.19.6",
    "Hypercorn == 0.17.3",
    "billiard == 4.2.1",
]

[tool.uv.sources]
app = { workspace = true }
pyfastmurmur3 = { workspace = true }
quart_d3graphviz = { workspace = true }
quart_foxdata = { workspace = true }
quart_htmx = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = []

[tool.ruff.format]
quote-style = "double"
