[build-system]
requires = ["setuptools == 70.0.0", "Cython == 3.0.10"]
build-backend = "setuptools.build_meta"

[project]
name = "FoxConnect"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "setuptools == 70.0.0",
    "Cython == 3.0.10",
    "Quart == 0.19.6",
    "Hypercorn == 0.17.3",
    "billiard == 4.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
