[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quart_d3graphviz"
version = "5.6.0"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-dir]
quart_d3graphviz = "quart_d3graphviz"

[tool.setuptools.package-data]
quart_d3graphviz = [
    "node_modules/d3/dist/*",
    "node_modules/d3-graphviz/build/*",
    "node_modules/@hpcc-js/wasm/dist/*",
]
